force-app/main/default/objects/Session__c/fields/SessionType__c.field-meta.xml
<CustomField>
    <fullName>SessionType__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCREENING</fullName>
                <default>true</default>
                <label>SCREENING</label>
            </value>
            <value>
                <fullName>SPECIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>