force-app/main/default/objects/Session__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>Text</type>
    <length>120</length>
</CustomField>