force-app/main/default/objects/Session__c/validationRules/EndAfterStart.validationRule-meta.xml
<ValidationRule>
    <fullName>EndAfterStart</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(EndDateTime__c)), EndDateTime__c &lt; StartDateTime__c)</errorConditionFormula>
    <errorMessage>End Date/Time must be after Start Date/Time.</errorMessage>
    <errorDisplayField>EndDateTime__c</errorDisplayField>
</ValidationRule>